@@ -1,3 +1,11 @@
+2017-02-24  Eric Herman <eric@freesa.org>
+
+	fix the "bi-calc" demo
+
+	* demos/bi-calc.c: fix param passing
+	* Makefile.am: "make demo" now works
+
+
 2016-11-26  Eric Herman <eric@freesa.org>
 
 	division now works with negative numbers
